# discord-bot

./: .gitignore  .gitmodules  CMakeLists.txt  commands.csv
common/: asserts.hpp  headers.hpp
core/: CMakeLists.txt
core/src/: commands.hpp  group_manager.cpp  group_manager.hpp  main.cpp  module_manager.cpp  module_manager.hpp  token.in.hpp
modules/: CMakeLists.txt
modules/administrator/: CMakeLists.txt
modules/administrator/src/: commands.hpp  main.cpp
modules/anime/: CMakeLists.txt
modules/anime/src/: commands.hpp  main.cpp
modules/player/: CMakeLists.txt
modules/player/lib/opusfile/: CMakeLists.txt
modules/player/src/: commands.hpp  main.cpp  per_guild.hpp  player.cpp  player.hpp  yt_search.hpp
modules/player/src/utils/: clock.hpp  random.hpp
modules/user/: CMakeLists.txt
modules/user/src/: commands.hpp  main.cpp
src/: main.in.cpp  per_guild.hpp  select_command.in.hpp
src/commands/: commands.hpp  generic_commands.hpp  music_commands.hpp
src/player/: player.cpp  player.hpp  queue.hpp  song.hpp  yt_search.hpp
src/structures/: per_guild.hpp
src/utils/: clock.hpp  random.hpp
